# ContextCraftlocal

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  PRD.md  README.context.md  README.md  context_craft_pro_prd.md  contextcraft.py  newprojectv3.py  planning_template.md  pyproject.toml  pytest.ini  readme_template.md  requirements.txt  setup.py  task_template.md
.github/workflows/: ci.yml  publish.yml
ContextCraftPro/: COMMANDS.md  DOCUMENTATION_INDEX.md  PHASE_8_SUMMARY.md  README.md  TESTING.md  USERGUIDE.md  ccp.py  pytest.ini  requirements-dev.txt  requirements.txt
ContextCraftPro/config/: contextcraft.yaml
ContextCraftPro/context/docs-context/: docs-index.md
ContextCraftPro/core/: ccp_cli.py  ccp_config.py  ccp_fs.py  ccp_llm.py  ccp_logger.py  ccp_orchestrator.py  ccp_prompts.py  ccp_templates.py
ContextCraftPro/docs/: llm-architecture.md
ContextCraftPro/templates/: claude-rules-template.md  initial-template.md  planning-template.md  prp-template.md  readme-template.md  task-template.md
ContextCraftPro/tests/: conftest.py  test_cli.py  test_config.py  test_fs.py  test_integration.py  test_llm.py
archive/: PHASE_9_SUMMARY.md
archive/_context_exports/20251121_103133/context/: claude.md  project-profile.yaml
config/: stacks.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  FEATURES.md  PROJECT_COMPLETION_SUMMARY.md
src/: cli.py  generator.py  utils.py
src/stack_generators/: __init__.py  base.py  javascript.py  python.py
templates/: env_template  gitignore_template  node_express_template.js  planning_template.md  python_fastapi_template.py  python_flask_template.py  python_streamlit_template.py  react_typescript_template.tsx  readme_template.md  task_template.md
tests/: test_generator.py  test_stack_generators.py  test_utils.py
