[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextcraft"
version = "1.0.0"
description = "Enhanced AI Project Structure Generator - Rapidly scaffold professional software projects"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["project-generator", "scaffolding", "cli", "boilerplate", "templates", "ai", "fastapi", "react", "flask"]
authors = [
    {name = "ContextCraft Contributors"}
]
maintainers = [
    {name = "ContextCraft Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Environment :: Console",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1.7",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "types-PyYAML>=6.0.12",
]

web = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
]

ai = [
    "openai>=1.3.9",
    "anthropic>=0.7.1",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
]

all = [
    "contextcraft[dev,web,ai,docs]",
]

[project.urls]
Homepage = "https://github.com/fuentej/ContextCraftlocal"
Documentation = "https://github.com/fuentej/ContextCraftlocal/blob/main/README.md"
Repository = "https://github.com/fuentej/ContextCraftlocal"
"Bug Tracker" = "https://github.com/fuentej/ContextCraftlocal/issues"
Changelog = "https://github.com/fuentej/ContextCraftlocal/blob/main/CHANGELOG.md"

[project.scripts]
contextcraft = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.stack_generators"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md", "*.txt", "*.py", "*.js", "*.tsx", "*.ts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interaction",
    "slow: Tests that take a long time to run",
    "smoke: Quick smoke tests for basic functionality",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
